Add Secrets API in KES dashboard frontend
