# models/encryption_delete_key_request.go
@@ -1,28 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-// This file is part of MinIO KES
-// Copyright (c) 2023 MinIO, Inc.
-//
-// This program is free software: you can redistribute it and/or modify
-// it under the terms of the GNU Affero General Public License as published by
-// the Free Software Foundation, either version 3 of the License, or
-// (at your option) any later version.
-//
-// This program is distributed in the hope that it will be useful,
-// but WITHOUT ANY WARRANTY; without even the implied warranty of
-// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-// GNU Affero General Public License for more details.
-//
-// You should have received a copy of the GNU Affero General Public License
-// along with this program.  If not, see <http://www.gnu.org/licenses/>.
-//
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-// EncryptionDeleteKeyRequest encryption delete key request
-//
-// swagger:model encryptionDeleteKeyRequest
-type EncryptionDeleteKeyRequest interface{}
